parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root, factory) {
  if (typeof define === "function" && define.amd) {
    define([], factory);
  } else if (typeof module === "object" && module.exports) {
    module.exports = factory();
  }
})(this, function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { proto: peg$parseproto },
        peg$startRuleFunction  = peg$parseproto,

        peg$c0 = function(z, a, b) {
            var arr = {syntax: a.syntax};
            arr.content = b.filter(function(a){return a !== undefined});
            return arr;
        },
        peg$c1 = "//",
        peg$c2 = peg$literalExpectation("//", false),
        peg$c3 = "/",
        peg$c4 = peg$literalExpectation("/", false),
        peg$c5 = "\r\n",
        peg$c6 = peg$literalExpectation("\r\n", false),
        peg$c7 = "\n",
        peg$c8 = peg$literalExpectation("\n", false),
        peg$c9 = peg$anyExpectation(),
        peg$c10 = function(a) {return a.map(function(c){return c.join('')}).join('')},
        peg$c11 = "/*",
        peg$c12 = peg$literalExpectation("/*", false),
        peg$c13 = "*",
        peg$c14 = peg$literalExpectation("*", false),
        peg$c15 = "*/",
        peg$c16 = peg$literalExpectation("*/", false),
        peg$c17 = function(a) {
          return a.map(function(c){return c.join('')}).join('');
        },
        peg$c18 = function(a) {return a},
        peg$c19 = /^[ \t]/,
        peg$c20 = peg$classExpectation([" ", "\t"], false, false),
        peg$c21 = function() {return ""},
        peg$c22 = /^[\r\n]/,
        peg$c23 = peg$classExpectation(["\r", "\n"], false, false),
        peg$c24 = function(a) { return a.filter(function (x){return x}) },
        peg$c25 = /^[A-Za-z]/,
        peg$c26 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false),
        peg$c27 = /^[0-9]/,
        peg$c28 = peg$classExpectation([["0", "9"]], false, false),
        peg$c29 = /^[0-7]/,
        peg$c30 = peg$classExpectation([["0", "7"]], false, false),
        peg$c31 = /^[0-9A-Fa-f]/,
        peg$c32 = peg$classExpectation([["0", "9"], ["A", "F"], ["a", "f"]], false, false),
        peg$c33 = "_",
        peg$c34 = peg$literalExpectation("_", false),
        peg$c35 = function(a, b) { return a+b.join("") },
        peg$c36 = ".",
        peg$c37 = peg$literalExpectation(".", false),
        peg$c38 = function(a, b) { b.unshift([a]); return b.map(function(c){return c.join('')}).join('') },
        peg$c39 = function(a, b, c) { return (a == '.' ? '.' : '')+b.map(function(a){return a.join('')}).join('')+c },
        peg$c40 = "0",
        peg$c41 = peg$literalExpectation("0", false),
        peg$c42 = /^[1-9]/,
        peg$c43 = peg$classExpectation([["1", "9"]], false, false),
        peg$c44 = function(a) { return parseInt(a[0]+a[1]) },
        peg$c45 = function(a) { return parseInt(a, 8) },
        peg$c46 = /^[xX]/,
        peg$c47 = peg$classExpectation(["x", "X"], false, false),
        peg$c48 = function(a) { return parseInt(a, 16) },
        peg$c49 = "inf",
        peg$c50 = peg$literalExpectation("inf", false),
        peg$c51 = "nan",
        peg$c52 = peg$literalExpectation("nan", false),
        peg$c53 = /^[eE]/,
        peg$c54 = peg$classExpectation(["e", "E"], false, false),
        peg$c55 = /^[+\-]/,
        peg$c56 = peg$classExpectation(["+", "-"], false, false),
        peg$c57 = "true",
        peg$c58 = peg$literalExpectation("true", false),
        peg$c59 = "false",
        peg$c60 = peg$literalExpectation("false", false),
        peg$c61 = "'",
        peg$c62 = peg$literalExpectation("'", false),
        peg$c63 = "\"",
        peg$c64 = peg$literalExpectation("\"", false),
        peg$c65 = function(obj) { return obj[1].join('') },
        peg$c66 = /^[^\0\n\\"']/,
        peg$c67 = peg$classExpectation(["\0", "\n", "\\", "\"", "'"], true, false),
        peg$c68 = "\\",
        peg$c69 = peg$literalExpectation("\\", false),
        peg$c70 = /^["']/,
        peg$c71 = peg$classExpectation(["\"", "'"], false, false),
        peg$c72 = /^[abfnrtv"'\\]/,
        peg$c73 = peg$classExpectation(["a", "b", "f", "n", "r", "t", "v", "\"", "'", "\\"], false, false),
        peg$c74 = ";",
        peg$c75 = peg$literalExpectation(";", false),
        peg$c76 = function() {},
        peg$c77 = /^[\-+]/,
        peg$c78 = peg$classExpectation(["-", "+"], false, false),
        peg$c79 = "syntax",
        peg$c80 = peg$literalExpectation("syntax", false),
        peg$c81 = "=",
        peg$c82 = peg$literalExpectation("=", false),
        peg$c83 = "proto2",
        peg$c84 = peg$literalExpectation("proto2", false),
        peg$c85 = "proto3",
        peg$c86 = peg$literalExpectation("proto3", false),
        peg$c87 = function(val) { return { type: "syntax", syntax: val } },
        peg$c88 = "import",
        peg$c89 = peg$literalExpectation("import", false),
        peg$c90 = "weak",
        peg$c91 = peg$literalExpectation("weak", false),
        peg$c92 = "public",
        peg$c93 = peg$literalExpectation("public", false),
        peg$c94 = function(mod, pkg) { return {type: "import", package: pkg, modifier: mod } },
        peg$c95 = "package",
        peg$c96 = peg$literalExpectation("package", false),
        peg$c97 = function(val) { return { type: "package", package: val } },
        peg$c98 = "option",
        peg$c99 = peg$literalExpectation("option", false),
        peg$c100 = function(name, val) { return { type: "option", name: name, val: val } },
        peg$c101 = "(",
        peg$c102 = peg$literalExpectation("(", false),
        peg$c103 = ")",
        peg$c104 = peg$literalExpectation(")", false),
        peg$c105 = function(a, c) { if(Array.isArray(a)) a = a.join(''); return a+(c[0] ? c[0].join('') : "") },
        peg$c106 = "double",
        peg$c107 = peg$literalExpectation("double", false),
        peg$c108 = "float",
        peg$c109 = peg$literalExpectation("float", false),
        peg$c110 = "int32",
        peg$c111 = peg$literalExpectation("int32", false),
        peg$c112 = "int64",
        peg$c113 = peg$literalExpectation("int64", false),
        peg$c114 = "uint32",
        peg$c115 = peg$literalExpectation("uint32", false),
        peg$c116 = "uint64",
        peg$c117 = peg$literalExpectation("uint64", false),
        peg$c118 = "sint32",
        peg$c119 = peg$literalExpectation("sint32", false),
        peg$c120 = "sint64",
        peg$c121 = peg$literalExpectation("sint64", false),
        peg$c122 = "fixed32",
        peg$c123 = peg$literalExpectation("fixed32", false),
        peg$c124 = "fixed64",
        peg$c125 = peg$literalExpectation("fixed64", false),
        peg$c126 = "sfixed32",
        peg$c127 = peg$literalExpectation("sfixed32", false),
        peg$c128 = "sfixed64",
        peg$c129 = peg$literalExpectation("sfixed64", false),
        peg$c130 = "bool",
        peg$c131 = peg$literalExpectation("bool", false),
        peg$c132 = "string",
        peg$c133 = peg$literalExpectation("string", false),
        peg$c134 = "bytes",
        peg$c135 = peg$literalExpectation("bytes", false),
        peg$c136 = "[",
        peg$c137 = peg$literalExpectation("[", false),
        peg$c138 = "]",
        peg$c139 = peg$literalExpectation("]", false),
        peg$c140 = function(a) {
            var opts = {};
            a.map(function(a){
                  if(typeof a == 'object' && a != null)
                    opts[a.name] = a.val;
            });
            return opts;    
        },
        peg$c141 = "repeated",
        peg$c142 = peg$literalExpectation("repeated", false),
        peg$c143 = function(prec, a, b, c, d, e, postc) { 
            return {
              type: "field",
              repeated: a != null,
              typename: b,
              name: c,
              fieldNo: d,
              opts: e == null ? {} : e,
              precomment: prec.join(""), 
              postcomment: postc
            } 
        },
        peg$c144 = ",",
        peg$c145 = peg$literalExpectation(",", false),
        peg$c146 = function(a, b) { var arr = [a]; b.map(function(elem){arr.push(elem)}); return arr; },
        peg$c147 = function(name, val) { return {name: name, val: val} },
        peg$c148 = "oneof",
        peg$c149 = peg$literalExpectation("oneof", false),
        peg$c150 = "{",
        peg$c151 = peg$literalExpectation("{", false),
        peg$c152 = "}",
        peg$c153 = peg$literalExpectation("}", false),
        peg$c154 = function(b, c) { 
            var arr = [];
            c.map(function(a){
        	if(a && a.type)
            	arr.push(a);
            });
            return { type: "oneof", name: b, content: arr } 
        },
        peg$c155 = function(b, c, d, e) {
            return {
              type: "field",
              typename: b,
              name: c,
              fieldNo: d,
              opts: e == null ? {} : e
            } 
        },
        peg$c156 = "map",
        peg$c157 = peg$literalExpectation("map", false),
        peg$c158 = "<",
        peg$c159 = peg$literalExpectation("<", false),
        peg$c160 = ">",
        peg$c161 = peg$literalExpectation(">", false),
        peg$c162 = function(a, b, c, d, e) {
            return {
              type: "field",
              typename: "map",
              key: a,
              value: b,
              name: c,
              fieldNo: d,
              opts: e == null ? {} : e
            }
        },
        peg$c163 = "reserved",
        peg$c164 = peg$literalExpectation("reserved", false),
        peg$c165 = "to",
        peg$c166 = peg$literalExpectation("to", false),
        peg$c167 = "enum",
        peg$c168 = peg$literalExpectation("enum", false),
        peg$c169 = function(a, b) { return {type: 'enum', name: a, content: b.content, opts: b.opts } },
        peg$c170 = function(a) { 
            var opts = {};
            var content = [];
            for(var elem of a){
        	if(!elem)
            	continue;
                else if(elem.type == 'enumField')
            	content.push(elem);
        	else if(elem.type == 'option')
            	opts[elem.name] = elem.val;
            }
            return {content: content, opts: opts};
        },
        peg$c171 = function(a, b, c) {
            return { type: 'enumField', name: a, val: b, opts: c == null ? {} : c };
        },
        peg$c172 = "message",
        peg$c173 = peg$literalExpectation("message", false),
        peg$c174 = function(prec, a, b, postc) { return {type: 'message', name: a, content: b.content, opts: b.opts ,precomment: prec.join(""), postcomment: postc} },
        peg$c175 = function(a) { 
            var opts = {};
            var content = [];
            for(var elem of a){
        	if(!elem)
            	continue;
        	else if(elem.type == 'option')
            	opts[elem.name] = elem.val;
                else
            	content.push(elem);
            }
            return {content: content, opts: opts};
        },
        peg$c176 = "service",
        peg$c177 = peg$literalExpectation("service", false),
        peg$c178 = function(prec, a, b, postc) { 
            var opts = {};
            var content = [];
            for(var elem of b){
        	if(!elem)
            	continue;
        	else if(elem.type == 'option')
            	opts[elem.name] = elem.val;
                else
            	content.push(elem);
            }
            return {type: "service", name: a, content: content, opts: opts, precomment: prec.join(""), postcomment: postc};
        },
        peg$c179 = "rpc",
        peg$c180 = peg$literalExpectation("rpc", false),
        peg$c181 = "stream",
        peg$c182 = peg$literalExpectation("stream", false),
        peg$c183 = "returns",
        peg$c184 = peg$literalExpectation("returns", false),
        peg$c185 = function(prec, a, b, c, d, e, f, postc) { 
            if(b && b[0] == "stream")
        	c+=" stream";
            if(d && d[0] == "stream")
        	e+=" stream";
            if( f == ";" )
        	f = {};
            return { type: "rpc", name: a, param: c, returns: e, opts: f, precomment: prec.join(""), postcomment: postc } 
        },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseproto() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parsews();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsesyntax();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseimport();
          if (s4 === peg$FAILED) {
            s4 = peg$parsepackage();
            if (s4 === peg$FAILED) {
              s4 = peg$parseoption();
              if (s4 === peg$FAILED) {
                s4 = peg$parseemptyStatement();
                if (s4 === peg$FAILED) {
                  s4 = peg$parsemessage();
                  if (s4 === peg$FAILED) {
                    s4 = peg$parseenum();
                    if (s4 === peg$FAILED) {
                      s4 = peg$parseservice();
                      if (s4 === peg$FAILED) {
                        s4 = peg$parserws();
                      }
                    }
                  }
                }
              }
            }
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseimport();
            if (s4 === peg$FAILED) {
              s4 = peg$parsepackage();
              if (s4 === peg$FAILED) {
                s4 = peg$parseoption();
                if (s4 === peg$FAILED) {
                  s4 = peg$parseemptyStatement();
                  if (s4 === peg$FAILED) {
                    s4 = peg$parsemessage();
                    if (s4 === peg$FAILED) {
                      s4 = peg$parseenum();
                      if (s4 === peg$FAILED) {
                        s4 = peg$parseservice();
                        if (s4 === peg$FAILED) {
                          s4 = peg$parserws();
                        }
                      }
                    }
                  }
                }
              }
            }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseslcomment() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c1) {
        s1 = peg$c1;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 47) {
          s2 = peg$c3;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          s5 = peg$currPos;
          peg$silentFails++;
          if (input.substr(peg$currPos, 2) === peg$c5) {
            s6 = peg$c5;
            peg$currPos += 2;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
          if (s6 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 10) {
              s6 = peg$c7;
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c8); }
            }
          }
          peg$silentFails--;
          if (s6 === peg$FAILED) {
            s5 = void 0;
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
          if (s5 !== peg$FAILED) {
            if (input.length > peg$currPos) {
              s6 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c9); }
            }
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$currPos;
            peg$silentFails++;
            if (input.substr(peg$currPos, 2) === peg$c5) {
              s6 = peg$c5;
              peg$currPos += 2;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c6); }
            }
            if (s6 === peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 10) {
                s6 = peg$c7;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c8); }
              }
            }
            peg$silentFails--;
            if (s6 === peg$FAILED) {
              s5 = void 0;
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
            if (s5 !== peg$FAILED) {
              if (input.length > peg$currPos) {
                s6 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c9); }
              }
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 10) {
              s4 = peg$c7;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c8); }
            }
            if (s4 === peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c5) {
                s4 = peg$c5;
                peg$currPos += 2;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c6); }
              }
            }
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c10(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsemlcomment() {
      var s0, s1, s2, s3, s4, s5, s6;
